connecting to DB

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       gtag('config', 'UA-135285553-1');
     </script>
 
-    <title>RPS</title>
+    <title>Kofa</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
